--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+@layer components {
+  main section {
+    @apply transition-transform duration-300 hover:scale-110;
+  }
+}
